--- a/localisation/useful_heirs_l_russian.yml
+++ b/localisation/useful_heirs_l_russian.yml
@@ -60,16 +60,26 @@ l_russian:
  usefulheirs.3110.desc: "Кто достоин унаследовать нашу империю?"
 
  usefulheirs.3110.back: "Никто."
- usefulheirs.3110.heir_maybe_1: "§Y[heir_maybe_1.GetName]§!"
- usefulheirs.3110.heir_maybe_2: "§Y[heir_maybe_2.GetName]§!"
- usefulheirs.3110.heir_maybe_3: "§Y[heir_maybe_3.GetName]§!"
- usefulheirs.3110.heir_maybe_4: "§Y[heir_maybe_4.GetName]§!"
- usefulheirs.3110.heir_maybe_5: "§Y[heir_maybe_5.GetName]§!"
- usefulheirs.3110.heir_maybe_6: "§Y[heir_maybe_6.GetName]§!"
- usefulheirs.3110.heir_maybe_7: "§Y[heir_maybe_7.GetName]§!"
- usefulheirs.3110.heir_maybe_8: "§Y[heir_maybe_8.GetName]§!"
- usefulheirs.3110.heir_maybe_9: "§Y[heir_maybe_9.GetName]§!"
- usefulheirs.3110.heir_maybe_10: "§Y[heir_maybe_10.GetName]§!"
+ usefulheirs.3110.leader_1: "§Y[leader_1.GetName]§!: Возраст - [leader_1.GetAge] | [leader_1.HasEthicIcon]"
+ usefulheirs.3110.leader_1.tooltip: "\n§Y[leader_1.GetName]'s§! - \nСтаж работы: §Y[leader_1.GetYearsOfService]§! \nДомашний мир: §Y[leader_1.GetBackgroundPlanet]§! \nБывшая профессия: §Y[leader_1.GetBackgroundJob]§! \nУровень мастерства: §Y[leader_1.GetSkill]§!"
+ usefulheirs.3110.leader_2: "§Y[leader_2.GetName]§!: Возраст - [leader_2.GetAge] | [leader_2.HasEthicIcon]"
+ usefulheirs.3110.leader_2.tooltip: "\n§Y[leader_2.GetName]'s§! - \nСтаж работы: §Y[leader_2.GetYearsOfService]§! \nДомашний мир: §Y[leader_2.GetBackgroundPlanet]§! \nБывшая профессия: §Y[leader_2.GetBackgroundJob]§! \nУровень мастерства: §Y[leader_2.GetSkill]§!"
+ usefulheirs.3110.leader_3: "§Y[leader_3.GetName]§!: Возраст - [leader_3.GetAge] | [leader_3.HasEthicIcon]"
+ usefulheirs.3110.leader_3.tooltip: "\n§Y[leader_3.GetName]'s§! - \nСтаж работы: §Y[leader_3.GetYearsOfService]§! \nДомашний мир: §Y[leader_3.GetBackgroundPlanet]§! \nБывшая профессия: §Y[leader_3.GetBackgroundJob]§! \nУровень мастерства: §Y[leader_3.GetSkill]§!"
+ usefulheirs.3110.leader_4: "§Y[leader_4.GetName]§!: Возраст - [leader_4.GetAge] | [leader_4.HasEthicIcon]"
+ usefulheirs.3110.leader_4.tooltip: "\n§Y[leader_4.GetName]'s§! - \nСтаж работы: §Y[leader_4.GetYearsOfService]§! \nДомашний мир: §Y[leader_4.GetBackgroundPlanet]§! \nБывшая профессия: §Y[leader_4.GetBackgroundJob]§! \nУровень мастерства: §Y[leader_4.GetSkill]§!"
+ usefulheirs.3110.leader_5: "§Y[leader_5.GetName]§!: Возраст - [leader_5.GetAge] | [leader_5.HasEthicIcon]"
+ usefulheirs.3110.leader_5.tooltip: "\n§Y[leader_5.GetName]'s§! - \nСтаж работы: §Y[leader_5.GetYearsOfService]§! \nДомашний мир: §Y[leader_5.GetBackgroundPlanet]§! \nБывшая профессия: §Y[leader_5.GetBackgroundJob]§! \nУровень мастерства: §Y[leader_5.GetSkill]§!"
+ usefulheirs.3110.leader_6: "§Y[leader_6.GetName]§!: Возраст - [leader_6.GetAge] | [leader_6.HasEthicIcon]"
+ usefulheirs.3110.leader_6.tooltip: "\n§Y[leader_6.GetName]'s§! - \nСтаж работы: §Y[leader_6.GetYearsOfService]§! \nДомашний мир: §Y[leader_6.GetBackgroundPlanet]§! \nБывшая профессия: §Y[leader_6.GetBackgroundJob]§! \nУровень мастерства: §Y[leader_6.GetSkill]§!"
+ usefulheirs.3110.leader_7: "§Y[leader_7.GetName]§!: Возраст - [leader_7.GetAge] | [leader_7.HasEthicIcon]"
+ usefulheirs.3110.leader_7.tooltip: "\n§Y[leader_7.GetName]'s§! - \nСтаж работы: §Y[leader_7.GetYearsOfService]§! \nДомашний мир: §Y[leader_7.GetBackgroundPlanet]§! \nБывшая профессия: §Y[leader_7.GetBackgroundJob]§! \nУровень мастерства: §Y[leader_7.GetSkill]§!"
+ usefulheirs.3110.leader_8: "§Y[leader_8.GetName]§!: Возраст - [leader_8.GetAge] | [leader_8.HasEthicIcon]"
+ usefulheirs.3110.leader_8.tooltip: "\n§Y[leader_8.GetName]'s§! - \nСтаж работы: §Y[leader_8.GetYearsOfService]§! \nДомашний мир: §Y[leader_8.GetBackgroundPlanet]§! \nБывшая профессия: §Y[leader_8.GetBackgroundJob]§! \nУровень мастерства: §Y[leader_8.GetSkill]§!"
+ usefulheirs.3110.leader_9: "§Y[leader_9.GetName]§!: Возраст - [leader_9.GetAge] | [leader_9.HasEthicIcon]"
+ usefulheirs.3110.leader_9.tooltip: "\n§Y[leader_9.GetName]'s§! - \nСтаж работы: §Y[leader_9.GetYearsOfService]§! \nДомашний мир: §Y[leader_9.GetBackgroundPlanet]§! \nБывшая профессия: §Y[leader_9.GetBackgroundJob]§! \nУровень мастерства: §Y[leader_9.GetSkill]§!"
+ usefulheirs.3110.leader_10: "§Y[leader_10.GetName]§!: Возраст - [leader_10.GetAge] | [leader_10.HasEthicIcon]"
+ usefulheirs.3110.leader_10.tooltip: "\n§Y[leader_10.GetName]'s§! - \nСтаж работы: §Y[leader_10.GetYearsOfService]§! \nДомашний мир: §Y[leader_10.GetBackgroundPlanet]§! \nБывшая профессия: §Y[leader_10.GetBackgroundJob]§! \nУровень мастерства: §Y[leader_10.GetSkill]§!"
 
  usefulheirs.3400.name: "§YСоображения династии§!"
  usefulheirs.3400.desc: "В ходе подготовки к коронации §H[new_chosen_heir.GetName]§! необходимо принять решение о том, присоединится ли он к императорской династии. Если нет, то они сохранят свое старое имя."
