--- a/localisation/useful_heirs_l_french.yml
+++ b/localisation/useful_heirs_l_french.yml
@@ -55,16 +55,26 @@ l_french:
  usefulheirs.3110.desc: "Who is worthy of being heir to the empire?"
 
  usefulheirs.3110.back: "None are worthy."
- usefulheirs.3110.heir_maybe_1: "§Y[heir_maybe_1.GetName]§!"
- usefulheirs.3110.heir_maybe_2: "§Y[heir_maybe_2.GetName]§!"
- usefulheirs.3110.heir_maybe_3: "§Y[heir_maybe_3.GetName]§!"
- usefulheirs.3110.heir_maybe_4: "§Y[heir_maybe_4.GetName]§!"
- usefulheirs.3110.heir_maybe_5: "§Y[heir_maybe_5.GetName]§!"
- usefulheirs.3110.heir_maybe_6: "§Y[heir_maybe_6.GetName]§!"
- usefulheirs.3110.heir_maybe_7: "§Y[heir_maybe_7.GetName]§!"
- usefulheirs.3110.heir_maybe_8: "§Y[heir_maybe_8.GetName]§!"
- usefulheirs.3110.heir_maybe_9: "§Y[heir_maybe_9.GetName]§!"
- usefulheirs.3110.heir_maybe_10: "§Y[heir_maybe_10.GetName]§!"
+ usefulheirs.3110.leader_1: "§Y[leader_1.GetName]§!: Age - [leader_1.GetAge] | [leader_1.HasEthicIcon]"
+ usefulheirs.3110.leader_1.tooltip: "\n§Y[leader_1.GetName]'s§! - \nLength of Service: §Y[leader_1.GetYearsOfService]§! \nHomeworld: §Y[leader_1.GetBackgroundPlanet]§! \nFormer Occupation: §Y[leader_1.GetBackgroundJob]§! \nSkill Level: §Y[leader_1.GetSkill]§!"
+ usefulheirs.3110.leader_2: "§Y[leader_2.GetName]§!: Age - [leader_2.GetAge] | [leader_2.HasEthicIcon]"
+ usefulheirs.3110.leader_2.tooltip: "\n§Y[leader_2.GetName]'s§! - \nLength of Service: §Y[leader_2.GetYearsOfService]§! \nHomeworld: §Y[leader_2.GetBackgroundPlanet]§! \nFormer Occupation: §Y[leader_2.GetBackgroundJob]§! \nSkill Level: §Y[leader_2.GetSkill]§!"
+ usefulheirs.3110.leader_3: "§Y[leader_3.GetName]§!: Age - [leader_3.GetAge] | [leader_3.HasEthicIcon]"
+ usefulheirs.3110.leader_3.tooltip: "\n§Y[leader_3.GetName]'s§! - \nLength of Service: §Y[leader_3.GetYearsOfService]§! \nHomeworld: §Y[leader_3.GetBackgroundPlanet]§! \nFormer Occupation: §Y[leader_3.GetBackgroundJob]§! \nSkill Level: §Y[leader_3.GetSkill]§!"
+ usefulheirs.3110.leader_4: "§Y[leader_4.GetName]§!: Age - [leader_4.GetAge] | [leader_4.HasEthicIcon]"
+ usefulheirs.3110.leader_4.tooltip: "\n§Y[leader_4.GetName]'s§! - \nLength of Service: §Y[leader_4.GetYearsOfService]§! \nHomeworld: §Y[leader_4.GetBackgroundPlanet]§! \nFormer Occupation: §Y[leader_4.GetBackgroundJob]§! \nSkill Level: §Y[leader_4.GetSkill]§!"
+ usefulheirs.3110.leader_5: "§Y[leader_5.GetName]§!: Age - [leader_5.GetAge] | [leader_5.HasEthicIcon]"
+ usefulheirs.3110.leader_5.tooltip: "\n§Y[leader_5.GetName]'s§! - \nLength of Service: §Y[leader_5.GetYearsOfService]§! \nHomeworld: §Y[leader_5.GetBackgroundPlanet]§! \nFormer Occupation: §Y[leader_5.GetBackgroundJob]§! \nSkill Level: §Y[leader_5.GetSkill]§!"
+ usefulheirs.3110.leader_6: "§Y[leader_6.GetName]§!: Age - [leader_6.GetAge] | [leader_6.HasEthicIcon]"
+ usefulheirs.3110.leader_6.tooltip: "\n§Y[leader_6.GetName]'s§! - \nLength of Service: §Y[leader_6.GetYearsOfService]§! \nHomeworld: §Y[leader_6.GetBackgroundPlanet]§! \nFormer Occupation: §Y[leader_6.GetBackgroundJob]§! \nSkill Level: §Y[leader_6.GetSkill]§!"
+ usefulheirs.3110.leader_7: "§Y[leader_7.GetName]§!: Age - [leader_7.GetAge] | [leader_7.HasEthicIcon]"
+ usefulheirs.3110.leader_7.tooltip: "\n§Y[leader_7.GetName]'s§! - \nLength of Service: §Y[leader_7.GetYearsOfService]§! \nHomeworld: §Y[leader_7.GetBackgroundPlanet]§! \nFormer Occupation: §Y[leader_7.GetBackgroundJob]§! \nSkill Level: §Y[leader_7.GetSkill]§!"
+ usefulheirs.3110.leader_8: "§Y[leader_8.GetName]§!: Age - [leader_8.GetAge] | [leader_8.HasEthicIcon]"
+ usefulheirs.3110.leader_8.tooltip: "\n§Y[leader_8.GetName]'s§! - \nLength of Service: §Y[leader_8.GetYearsOfService]§! \nHomeworld: §Y[leader_8.GetBackgroundPlanet]§! \nFormer Occupation: §Y[leader_8.GetBackgroundJob]§! \nSkill Level: §Y[leader_8.GetSkill]§!"
+ usefulheirs.3110.leader_9: "§Y[leader_9.GetName]§!: Age - [leader_9.GetAge] | [leader_9.HasEthicIcon]"
+ usefulheirs.3110.leader_9.tooltip: "\n§Y[leader_9.GetName]'s§! - \nLength of Service: §Y[leader_9.GetYearsOfService]§! \nHomeworld: §Y[leader_9.GetBackgroundPlanet]§! \nFormer Occupation: §Y[leader_9.GetBackgroundJob]§! \nSkill Level: §Y[leader_9.GetSkill]§!"
+ usefulheirs.3110.leader_10: "§Y[leader_10.GetName]§!: Age - [leader_10.GetAge] | [leader_10.HasEthicIcon]"
+ usefulheirs.3110.leader_10.tooltip: "\n§Y[leader_10.GetName]'s§! - \nLength of Service: §Y[leader_10.GetYearsOfService]§! \nHomeworld: §Y[leader_10.GetBackgroundPlanet]§! \nFormer Occupation: §Y[leader_10.GetBackgroundJob]§! \nSkill Level: §Y[leader_10.GetSkill]§!"
 
  usefulheirs.3400.name: "§YDynastic Concerns§!"
  usefulheirs.3400.desc: "As we prepare for the coronation of §H[new_chosen_heir.GetName]§!, the decision must be made as to whether or not they will join the Imperial dynasty. If not, they shall keep their old name."
