--- a/localisation/useful_heirs_l_simp_chinese.yml
+++ b/localisation/useful_heirs_l_simp_chinese.yml
@@ -25,7 +25,7 @@ l_simp_chinese:
  usefulheirs.1000.c.tooltip: "我们将退位，我们的继承人将接任。"
  usefulheirs.1000.d: "没关系。"
  usefulheirs.2000.name: "[root.GetHeirTitle][heir_leader.GetName]"
- usefulheirs.2000.cesc: "我今天该如何为[Root.GetName]效力？"
+ usefulheirs.2000.desc: "我今天该如何为[Root.GetName]效力？"
  usefulheirs.2000.a: "作为$official_with_icon$"
  usefulheirs.2000.b: "作为$commander_with_icon$"
  usefulheirs.2000.c: "作为$scientist_with_icon$"
